# swig_cmake_example

./: CMakeLists.txt  cpp.cmake  python.cmake
include/: example.h
python/: example.i
source/: example.cpp
